--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,45 @@
-version: '3.6'
 services:
   mosquitto:
     image: eclipse-mosquitto:latest
     container_name: mosquitto
     restart: always
     volumes:
-      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./mosquitto/data:/mosquitto/data
+      - ./mosquitto/log:/mosquitto/log
     ports:
       - "1883:1883"
       - "9001:9001"
     networks:
-      - iot
-      
+      - iot_network
+
+  node-red:
+    image: nodered/node-red:latest
+    container_name: node-red
+    ports:
+      - "1880:1880"
+    depends_on:
+      - mosquitto
+    networks:
+      - iot_network
+    volumes:
+      - node-red-data:/data
+    restart: always
+
+  nestjs-app:
+    build: .
+    container_name: nestjs-app
+    ports:
+      - "3300:3300"
+    depends_on:
+      - mosquitto
+    networks:
+      - iot_network
+    restart: always
+
 networks:
-  iot:
+  iot_network:
+    driver: bridge
+
+volumes:
+  node-red-data: {}
