--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   mosquitto:
     image: eclipse-mosquitto:latest
@@ -8,8 +10,8 @@ services:
       - ./mosquitto/data:/mosquitto/data
       - ./mosquitto/log:/mosquitto/log
     ports:
-      - "1883:1883"
-      - "9001:9001"
+      - "${MQTT_PORT}:1883"
+      - "${WS_PORT}:9001"
     networks:
       - iot_network
 
@@ -29,13 +31,32 @@ services:
   nestjs-app:
     build: .
     container_name: nestjs-app
+    environment:
+      - NODE_ENV=${NODE_ENV}
+      - JWT_AT_SECRET=${JWT_AT_SECRET}
+      - JWT_RT_SECRET=${JWT_RT_SECRET}
+      - DATABASE_URL=${DATABASE_URL}
     ports:
-      - "3300:3300"
+      - "${APP_PORT}:3333"
     depends_on:
       - mosquitto
     networks:
       - iot_network
     restart: always
+
+  mongo:
+    image: mongo:latest
+    container_name: mongo
+    restart: always
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=example
+    volumes:
+      - mongo-data:/data/db
+    ports:
+      - "${MONGO_PORT}:27017"
+    networks:
+      - iot_network
 
 networks:
   iot_network:
@@ -43,3 +64,4 @@ networks:
 
 volumes:
   node-red-data: {}
+  mongo-data: {}
