fix: mongodb connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,19 +44,22 @@ services:
       - iot_network
     restart: always
 
-  mongo:
-    image: mongo:latest
-    container_name: mongo
-    restart: always
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=example
-    volumes:
-      - mongo-data:/data/db
-    ports:
-      - "${MONGO_PORT}:27017"
-    networks:
-      - iot_network
+  # mongo:
+  #   image: mongo:latest
+  #   container_name: mongo
+  #   restart: always
+  #   environment:
+  #     MONGO_INITDB_ROOT_USERNAME: admin
+  #     MONGO_INITDB_ROOT_PASSWORD: password
+  #     MONGO_INITDB_DATABASE: db
+  #     MONGO_REPLICA_HOST: localhost
+  #     MONGO_REPLICA_PORT: "27017"
+  #   volumes:
+  #     - mongo-data:/data/db
+  #   ports:
+  #     - "${MONGO_PORT}:27017"
+  #   networks:
+  #     - iot_network
 
 networks:
   iot_network:
