--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mongodb": "^6.6.0",
     "mqtt": "^5.5.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
