--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,9 @@
 {
-  "singleQuote": true,
-  "endOfLine": "auto",
-  "trailingComma": "all"
+  "semi": true,
+  "trailingComma": "all",
+  "singleQuote": false,
+  "printWidth": 180,
+  "tabWidth": 2,
+  "arrowParens": "avoid",
+  "endOfLine": "crlf"
 }
