fix: mongo conexao

--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_PORT=3333
 
 # MongoDB Configuration
 MONGO_PORT=27017
-DATABASE_URL="mongodb+srv://jonathanbergamo16:eCOE5XwzHXY7iD6R@cluster0.hwgwweq.mongodb.net/mqtt"
+DATABASE_URL='mongodb+srv://jonathanbergamo16:eCOE5XwzHXY7iD6R@cluster0.hwgwweq.mongodb.net/mqtt'
 
 # JWT Configuration
 JWT_AT_SECRET=132re12s32r112f3r214c
