--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -2,6 +2,10 @@
 # Listeners
 # =================================================================
 listener 1883
+protocol mqtt
+
+listener 9001
+protocol websockets
 
 # =================================================================
 # Security
