--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   mosquitto:
     image: eclipse-mosquitto:2.0.11
@@ -40,18 +38,29 @@ services:
       - "${APP_PORT}:3333"
     depends_on:
       - mosquitto
+      - mariadb
     networks:
       - iot_network
     restart: always
+
+  mariadb:
+    image: mariadb:10.2
+    environment:
+      MYSQL_ROOT_PASSWORD: mariadb
+      MYSQL_DATABASE: mybb
+      MYSQL_USER: mybb
+      MYSQL_PASSWORD: mariadb
+    networks:
+      - iot_network
+    restart: on-failure
 
   # mongo:
   #   image: mongo:latest
   #   container_name: mongo
   #   restart: always
+  #   command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
   #   environment:
-  #     MONGO_INITDB_ROOT_USERNAME: admin
-  #     MONGO_INITDB_ROOT_PASSWORD: password
-  #     MONGO_INITDB_DATABASE: db
+  #     MONGO_INITDB_DATABASE: mqtt
   #     MONGO_REPLICA_HOST: localhost
   #     MONGO_REPLICA_PORT: "27017"
   #   volumes:
@@ -67,4 +76,4 @@ networks:
 
 volumes:
   node-red-data: {}
-  mongo-data: {}
+  # mongo-data: {}
