--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ APP_PORT=3333
 MONGO_PORT=27017
 DATABASE_URL='mongodb+srv://jonathanbergamo16:eCOE5XwzHXY7iD6R@cluster0.hwgwweq.mongodb.net/mqtt'
 
+# MariaDB
+MARIADB_URI="mysql://user:prisma@localhost:4306/mqtt"
+
 # JWT Configuration
 JWT_AT_SECRET=132re12s32r112f3r214c
 JWT_RT_SECRET=132re12s32r112f3r214c
