--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ MONGO_PORT=27017
 DATABASE_URL="mongodb://mongo:27017/mqtt"
 
 # MariaDB
-MARIADB_URI="mysql://user:prisma@localhost:4306/mqtt"
+MARIADB_URI="mysql://user:prisma@mariadb:4306/mqtt"
 
 # JWT Configuration
 JWT_AT_SECRET=132re12s32r112f3r214c
