--- a/.env
+++ b/.env
@@ -6,8 +6,14 @@ APP_PORT=3333
 MONGO_PORT=27017
 DATABASE_URL="mongodb://mongo:27017/mqtt"
 
+
 # MariaDB
+REMOTE_DB_HOST="mariadb"
+DOMAIN=
 MARIADB_URI="mysql://user:prisma@mariadb:4306/mqtt"
+DB_USERNAME=user
+DB_PASSWORD=prisma
+DB_DATABASE=mqtt
 
 # JWT Configuration
 JWT_AT_SECRET=132re12s32r112f3r214c
