fix: enable cors

--- a/vercel.json
+++ b/vercel.json
@@ -16,26 +16,9 @@
         "PUT",
         "DELETE"
       ],
-      "headers": [
-        {
-          "source": "/(.*)",
-          "headers": [
-            {
-              "key": "Access-Control-Allow-Origin",
-              "value": "*"
-            }
-          ]
-        },
-        {
-          "source": "/vercel_app_domain_name/(.*)",
-          "headers": [
-            {
-              "key": "Access-Control-Allow-Origin",
-              "value": "*"
-            }
-          ]
-        }
-      ]
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
