--- a/vercel.json
+++ b/vercel.json
@@ -9,16 +9,14 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "dist/main.js",
+      "dest": "src/main.ts",
       "methods": [
         "GET",
         "POST",
         "PUT",
-        "DELETE"
-      ],
-      "headers": {
-        "Access-Control-Allow-Origin": "*"
-      }
+        "DELETE",
+        "OPTIONS"
+      ]
     }
   ]
 }
