build: cors allow origin atempt

--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,12 @@
         "POST",
         "PUT",
         "DELETE",
+        "PATCH",
         "OPTIONS"
-      ]
+      ],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
