build: docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,35 +26,35 @@ services:
   #     - node-red-data:/data
   #   restart: always
 
-  # nestjs-app:
-  #   build: .
-  #   container_name: nestjs-app
-  #   environment:
-  #     - NODE_ENV=${NODE_ENV}
-  #     - JWT_AT_SECRET=${JWT_AT_SECRET}
-  #     - JWT_RT_SECRET=${JWT_RT_SECRET}
-  #     - DATABASE_URL=${DATABASE_URL}
-  #   ports:
-  #     - "${APP_PORT}:3333"
-  #   depends_on:
-  #     - mosquitto
-  #     - mariadb
-  #   networks:
-  #     - iot_network
-  #   restart: always
+  nestjs-app:
+    build: .
+    container_name: nestjs-app
+    environment:
+      - NODE_ENV=${NODE_ENV}
+      - JWT_AT_SECRET=${JWT_AT_SECRET}
+      - JWT_RT_SECRET=${JWT_RT_SECRET}
+      - DATABASE_URL=${DATABASE_URL}
+    ports:
+      - "${APP_PORT}:3333"
+    depends_on:
+      - mosquitto
+      - mariadb
+    networks:
+      - iot_network
+    restart: always
 
   mariadb:
     image: mariadb:10
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=mqtt
-      - MYSQL_USER=prisma # not used
-      - MYSQL_PASSWORD=prisma
+      - MYSQL_ROOT_PASSWORD=${ROOT_PASSWORD}
+      - MYSQL_DATABASE=${DB_DATABASE}
+      - MYSQL_USER=${DB_USERNAME} # not used
+      - MYSQL_PASSWORD=${DB_PASSWORD}
     ports:
-      - '3306:3306'
+      - "3306:3306"
     healthcheck:
-      test: ['CMD', '/usr/local/bin/healthcheck.sh', '--connect']
+      test: ["CMD", "/usr/local/bin/healthcheck.sh", "--connect"]
       interval: 5s
       timeout: 2s
       retries: 20
@@ -62,22 +62,6 @@ services:
       - mariadb-data:/var/lib/mysql
     networks:
       - iot_network
-
-  # mongo:
-  #   image: mongo:latest
-  #   container_name: mongo
-  #   restart: always
-  #   command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
-  #   environment:
-  #     MONGO_INITDB_DATABASE: mqtt
-  #     MONGO_REPLICA_HOST: localhost
-  #     MONGO_REPLICA_PORT: "27017"
-  #   volumes:
-  #     - mongo-data:/data/db
-  #   ports:
-  #     - "${MONGO_PORT}:27017"
-  #   networks:
-  #     - iot_network
 
 networks:
   iot_network:
@@ -87,3 +71,4 @@ volumes:
   node-red-data: {}
   mariadb-data: {}
   # mongo-data: {}
+
