--- a/example.env
+++ b/example.env
@@ -2,9 +2,10 @@
 DB_TYPE=
 DB_HOST=
 DB_PORT=
-DB_USERNAME=
-DB_PASSWORD=
-DB_DATABASE=
+DB_USERNAME=prisma
+DB_PASSWORD=prisma
+DB_DATABASE=mqt
+ROOT_PASSWORD=root
 # MQTT Configuration
 MQTT_HOST=
 MQTT_PORT=
