--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,9 @@
     "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pino": "^9.3.2",
+    "pino-http": "^10.2.0",
+    "pino-socket": "^7.4.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
