--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
     "@nestjs/websockets": "^10.3.8",
     "@prisma/client": "^5.13.0",
     "@types/bcrypt": "^5.0.2",
-    "bcrypt": "^5.1.1",
+    "@willsoto/nestjs-prometheus": "^6.0.1",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
@@ -43,6 +44,7 @@
     "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.5",
