--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,30 @@ services:
         depends_on:
             - node
 
+    prometheus:
+        image: prom/prometheus:latest
+        container_name: prometheus
+        volumes:
+            - ./prometheus:/etc/prometheus
+        ports:
+            - "9090:9090"
+        command:
+            - '--config.file=/etc/prometheus/prometheus.yml'
+        networks:
+            - backend
+
+    grafana:
+        image: grafana/grafana:latest
+        container_name: grafana
+        environment:
+            - GF_SECURITY_ADMIN_PASSWORD=admin
+        ports:
+            - "5000:5000"
+        networks:
+            - backend
+        depends_on:
+            - prometheus
+
 volumes:
     mariadb-data: {}
 
