--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,9 +14,12 @@ services:
             - 80:80
         restart: always
         networks:
+            - backend
             - frontend
         depends_on:
             - node
+            - grafana
+            - client
 
     node:
         build:
@@ -66,6 +69,7 @@ services:
             - MYSQL_DATABASE=mqtt
             - MYSQL_USER=prisma
             - MYSQL_PASSWORD=prisma
+            - TZ='America/Sao_Paulo'
         ports:
             - "3306:3306"
         healthcheck:
@@ -94,6 +98,21 @@ services:
         depends_on:
             - node
 
+    node-red:
+        image: nodered/node-red:latest
+        container_name: node-red
+        environment:
+            - TZ=America/Sao_Paulo
+        ports:
+            - "1880:1880"
+        volumes:
+            - ./node-red:/data
+        restart: always
+        networks:
+            - backend
+        depends_on:
+            - mosquitto
+
     prometheus:
         image: prom/prometheus:latest
         container_name: prometheus
@@ -111,10 +130,14 @@ services:
         container_name: grafana
         environment:
             - GF_SECURITY_ADMIN_PASSWORD=admin
+            - GF_SERVER_ROOT_URL=http://localhost/grafana/
+            - GF_SERVER_HTTP_PORT=5000
+            - GF_SERVER_ROOT_URL=%(protocol)s://%(domain)s:%(http_port)s/grafana/
         ports:
             - "5000:5000"
         networks:
             - backend
+            - frontend
         depends_on:
             - prometheus
 
