--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -26,4 +26,13 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+
+    location /grafana/ {
+        proxy_pass http://grafana:5000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/grafana/(.*) /$1 break;
+    }
 }
