fix: adjust copy .workspace

--- a/docker/client/Dockerfile
+++ b/docker/client/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /usr/client/src/app
 # Copia os arquivos de definição de dependências
 COPY client/package*.json ./
 
-# Instala as dependências de produção
-RUN npm install --production
+# Instala todas as dependências
+RUN npm install
 
 # Copia o restante dos arquivos do projeto
 COPY client ./
@@ -25,15 +25,13 @@ WORKDIR /usr/client/src/app
 COPY --from=build /usr/client/src/app/package*.json ./
 COPY --from=build /usr/client/src/app/node_modules ./node_modules
 COPY --from=build /usr/client/src/app/.next ./.next
-COPY --from=build /usr/client/src/app/public ./public
 
-# Instala as dependências de produção
-RUN npm install --production
+# Remove as dependências de desenvolvimento
+RUN npm prune --production
 
 # Expõe a porta para o Next.js
 EXPOSE 3000
 
-# Executa o contêiner como um usuário não root
 USER node
 
 # Comando para iniciar a aplicação
