chore: configure portainer service and add nginx conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,19 @@ services:
         networks:
             - backend
 
+    portainer:
+        image: portainer/portainer-ce:latest
+        container_name: portainer
+        restart: unless-stopped
+        ports:
+            - "9000:9000"
+        volumes:
+            - /var/run/docker.sock:/var/run/docker.sock
+            - portainer_data:/data
+        networks:
+            - backend
+            - frontend
+
     mariadb:
         image: mariadb:10.11.8
         restart: unless-stopped
@@ -129,6 +142,7 @@ services:
 volumes:
     mariadb-data: {}
     grafana_data:
+    portainer_data:
 
 networks:
     frontend:
