--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,7 +3,7 @@
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
-    server_name localhost;
+    server_name mundobee;
 
     # Configurações de log (opcional)
     # error_log /var/log/nginx/error.log;
@@ -34,5 +34,15 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         rewrite ^/grafana/(.*) /$1 break;
+    }
+}
+
+    location /portainer/ {
+        proxy_pass http://portainer:9000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/portainer/(.*) /$1 break;
     }
 }
