fix: adjust portainer location

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -27,6 +27,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
+    # Serve o Grafana no caminho /grafana
     location /grafana/ {
         proxy_pass http://grafana:5000/;
         proxy_set_header Host $host;
@@ -35,8 +36,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         rewrite ^/grafana/(.*) /$1 break;
     }
-}
 
+    # Serve o Portainer no caminho /portainer
     location /portainer/ {
         proxy_pass http://portainer:9000/;
         proxy_set_header Host $host;
