--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,5 +1,3 @@
-# Nginx configuration
-
 server {
     listen 80 default_server;
     listen [::]:80 default_server;
@@ -12,39 +10,77 @@ server {
     # Serve o frontend Next.js na raiz
     location / {
         proxy_pass http://client:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Removendo as verificações de host
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Configurações para evitar loops e melhorar a resiliência
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 10s;
+        proxy_next_upstream off;
     }
 
     # Serve a API no caminho /api
     location /api {
         proxy_pass http://node:3333;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Removendo as verificações de host
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Configurações para evitar loops e melhorar a resiliência
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 10s;
+        proxy_next_upstream off;
     }
 
     # Serve o Grafana no caminho /grafana
     location /grafana/ {
         proxy_pass http://grafana:5000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        rewrite ^/grafana/(.*) /$1 break;
+        
+        # Removendo as verificações de host
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Configurações para evitar loops e melhorar a resiliência
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 10s;
+        proxy_next_upstream off;
+        
+        # Evita redirecionamentos que possam causar loops
+        proxy_redirect off;
     }
 
     # Serve o Portainer no caminho /portainer
     location /portainer/ {
         proxy_pass http://portainer:9000/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        rewrite ^/portainer/(.*) /$1 break;
+        
+        # Removendo as verificações de host
+        # proxy_set_header Host $host;
+        # proxy_set_header X-Real-IP $remote_addr;
+        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        
+        # Configurações para evitar loops e melhorar a resiliência
+        proxy_connect_timeout 5s;
+        proxy_read_timeout 10s;
+        proxy_next_upstream off;
+        
+        # Evita redirecionamentos que possam causar loops
+        proxy_redirect off;
     }
 
+    # Página de erro personalizada para 502 Bad Gateway
+    error_page 502 /502.html;
+    location = /502.html {
+        root /usr/share/nginx/html;
+        internal;
+    }
 }
