--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,79 +1,58 @@
+# Redireciona todo o tráfego HTTP para HTTPS
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name mundobee;
+    listen 80;
+    listen [::]:80;
+    server_name raspieserver.win www.raspieserver.win;
+    return 301 https://$host$request_uri;
+}
 
-    # Configurações de log (opcional)
-    # error_log /var/log/nginx/error.log;
-    # access_log /var/log/nginx/access.log;
+# Configuração do servidor HTTPS
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    server_name raspieserver.win www.raspieserver.win;
 
-    # Serve o frontend Next.js na raiz
+    # Caminhos para os certificados SSL da Cloudflare
+    # Certificado e chave fornecidos pela Cloudflare ao configurar o Origin Certificate
+    ssl_certificate /etc/ssl/certs/cloudflare_origin.crt;
+    ssl_certificate_key /etc/ssl/private/cloudflare_origin.key;
+
+    # Protocolos e cifradores recomendados para Cloudflare
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers HIGH:!aNULL:!MD5;
+
+    # Configurações do proxy reverso
     location / {
         proxy_pass http://client:3000;
-        
-        # Removendo as verificações de host
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Configurações para evitar loops e melhorar a resiliência
-        proxy_connect_timeout 5s;
-        proxy_read_timeout 10s;
-        proxy_next_upstream off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Serve a API no caminho /api
     location /api {
         proxy_pass http://node:3333;
-        
-        # Removendo as verificações de host
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Configurações para evitar loops e melhorar a resiliência
-        proxy_connect_timeout 5s;
-        proxy_read_timeout 10s;
-        proxy_next_upstream off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # Serve o Grafana no caminho /grafana
     location /grafana/ {
         proxy_pass http://grafana:5000/;
-        
-        # Removendo as verificações de host
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Configurações para evitar loops e melhorar a resiliência
-        proxy_connect_timeout 5s;
-        proxy_read_timeout 10s;
-        proxy_next_upstream off;
-        
-        # Evita redirecionamentos que possam causar loops
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
     }
 
-    # Serve o Portainer no caminho /portainer
     location /portainer/ {
         proxy_pass http://portainer:9000/;
-        
-        # Removendo as verificações de host
-        # proxy_set_header Host $host;
-        # proxy_set_header X-Real-IP $remote_addr;
-        # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        # proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Configurações para evitar loops e melhorar a resiliência
-        proxy_connect_timeout 5s;
-        proxy_read_timeout 10s;
-        proxy_next_upstream off;
-        
-        # Evita redirecionamentos que possam causar loops
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_redirect off;
     }
 
