--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -3,5 +3,7 @@ FROM nginx:alpine
 
 # Copiar o certificado e a chave SSL para o container
 # Supondo que os arquivos cloudflare_origin.crt e cloudflare_origin.key estejam no mesmo diretório que o Dockerfile
-COPY cloudflare_origin.crt /etc/ssl/certs/cloudflare_origin.crt
-COPY cloudflare_origin.key /etc/ssl/private/cloudflare_origin.key
+COPY docker/nginx/cloudflare_origin.crt /etc/ssl/certs/cloudflare_origin.crt
+COPY docker/nginx/cloudflare_origin.key /etc/ssl/private/cloudflare_origin.key
+
+COPY docker/nginx/default.conf /etc/nginx/default.conf
