--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
-server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
+1server {
+    listen 80;
+    listen [::]:80;
     server_name raspieserver.win www.raspieserver.win;
 
     # Cabeçalhos de Segurança Adicionais
