--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -10,8 +10,8 @@
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
 
     # Configurações do proxy reverso
-    location / {
-        proxy_pass http://client:3000;
+    location /mqtt {
+        proxy_pass http://mosquitto:1883;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,7 +44,7 @@
         proxy_buffering off;
     }
 
-    location /portainer/ {
+    location / {
         proxy_pass http://portainer:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
