--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,6 @@ services:
     depends_on:
       - node
       - grafana
-      - client
       - mosquitto
       - portainer
       - mariadb
@@ -103,21 +102,6 @@ services:
     networks:
       - backend
 
-  client:
-    build:
-      context: .
-      dockerfile: ./docker/client/Dockerfile
-    container_name: client
-    ports:
-      - ${FRONT_PORT}:${FRONT_PORT}
-    volumes:
-      - ./client:/usr/src/app
-    restart: always
-    networks:
-      - frontend
-    depends_on:
-      - node
-
   prometheus:
     image: prom/prometheus:v2.41.0
     container_name: prometheus
@@ -155,6 +139,6 @@ volumes:
 
 networks:
   frontend:
-    driver: bridge
+    driver: overlay
   backend:
-    driver: bridge
+    driver: overlay
