--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,65 +1,50 @@
-1server {
-    listen 80;
-    listen [::]:80;
-    server_name raspieserver.win www.raspieserver.win;
+# Nginx configuration
 
-    # Cabeçalhos de Segurança Adicionais
-    add_header X-Content-Type-Options nosniff;
-    add_header X-Frame-Options DENY;
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name mundobee;
 
-    # Configurações do proxy reverso
-    location /mqtt {
-        proxy_pass http://mosquitto:1883;
+    # Configurações de log (opcional)
+    # error_log /var/log/nginx/error.log;
+    # access_log /var/log/nginx/access.log;
+
+    # Serve o frontend Next.js na raiz
+    location / {
+        proxy_pass http://client:3000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_buffering off;
     }
 
+    # Serve a API no caminho /api
     location /api {
         proxy_pass http://node:3333;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_buffering off;
     }
 
+    # Serve o Grafana no caminho /grafana
     location /grafana/ {
         proxy_pass http://grafana:5000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_buffering off;
+        rewrite ^/grafana/(.*) /$1 break;
     }
 
-    location / {
+    # Serve o Portainer no caminho /portainer
+    location /portainer/ {
         proxy_pass http://portainer:9000/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_redirect off;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-        proxy_buffering off;
+        rewrite ^/portainer/(.*) /$1 break;
     }
 
-    # Página de erro personalizada para 502 Bad Gateway
-    error_page 502 /502.html;
-    location = /502.html {
-        root /usr/share/nginx/html;
-        internal;
-    }
 }
